--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
       transform: translate(-50%, -50%);
       font-size: 20px;
       text-align: center;
-      color: white;
-      background-color: rgba(0, 0, 0, 0.5);
+      color: rgb(252, 251, 251);
+      background-color: rgb(8, 8, 8);
       padding: 10px;
       display: block;
     }
